adding constants values